--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,17 +8,10 @@
   box-sizing: border-box;
 }
 
-@font-face {
-  font-family: "Helvetica Now Display";
-  src: url("../public/fonts/HelveticaNowDisplay-Medium.ttf") format("truetype");
-  font-style: normal;
-  font-weight: normal;
-}
-
 body {
   background-color: #000 !important;
   color: #fff !important;
-  font-family: "Helvetica Now Display", sans-serif;
+  font-family: var(--font-helvetica), sans-serif;
   font-weight: 500;
 }
 
