fix: fix font text

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,8 +11,8 @@
 body {
   background-color: #000 !important;
   color: #fff !important;
-  font-family: var(--font-helvetica), sans-serif;
-  font-weight: 500;
+  font-family: var(--font-inter), sans-serif;
+  font-weight: 400;
 }
 
 a {
